--- a/themes/landscape/layout/_widget/tagcloud.ejs
+++ b/themes/landscape/layout/_widget/tagcloud.ejs
@@ -2,7 +2,15 @@
   <div class="widget-wrap">
     <h3 class="widget-title"><%= __('tagcloud') %></h3>
     <div class="widget tagcloud">
-      <%- tagcloud() %>
+      <%- tagcloud(site.tags, {
+        min_font: 13,
+        max_font: 23,
+        amount: 65,
+        orderby: 'count',
+        color: true,
+        start_color: '#9733EE',
+        end_color: '#FF512F'
+      }) %>
     </div>
   </div>
 <% } %>
