页面小优化

--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -289,7 +289,8 @@ img:hover {
 // 时间轴左边线条
 .posts-collapse::after {
     margin-left: -2px;
-    background-image: linear-gradient(180deg,#f79533 0,#f37055 15%,#ef4e7b 30%,#a166ab 44%,#5073b8 58%,#1098ad 72%,#07b39b 86%,#6dba82 100%);
+    z-index: 1;
+	background-image: linear-gradient(180deg,#f79533 0,#f37055 15%,#ef4e7b 30%,#a166ab 44%,#5073b8 58%,#1098ad 72%,#07b39b 86%,#6dba82 100%);
 }
 // 时间轴左边线条圆点颜色
 .posts-collapse .collection-title::before {
@@ -301,7 +302,7 @@ img:hover {
 }
 // 时间轴年份
 .posts-collapse .collection-title h1, .posts-collapse .collection-title h2 {
-    color: rgb(255, 255, 255);
+    color: rgb(51, 51, 51);
 }
 // 时间轴文章标题
 .posts-collapse .post-title a {
