--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -31,6 +31,7 @@
 }
 // 站点名字体
 .site-title {
+    font-family: Roboto Slab;
     font-size: 75px;
     font-weight: bold;
     color: rgb(255, 255, 255);
@@ -39,6 +40,7 @@
 }
 // 站点子标题
 .site-subtitle{
+    font-family: Roboto Slab;
     margin: 0px;
     font-size: 16px;
     letter-spacing: 1px;
@@ -317,18 +319,18 @@ img:hover {
 }
 // archives页面顶部文字
 .page-archive .archive-page-counter {
-    color: rgb(255, 255, 255);
+    color: rgb(51, 51, 51);
 }
 // archives页面时间轴左边线条第一个圆点颜色
 .page-archive .posts-collapse .archive-move-on {
     top: 10px;
     opacity: 1;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(#F2F2F2);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 // 分类页面
 .post-block.page {
-    margin-top: 40px;
+    margin-top: 0px;
 }
 .category-all-page {
     margin: -80px 50px 40px 50px;
@@ -596,10 +598,12 @@ code.description {
 // 移动端顶部
 @media (max-width: 767px) {
     .site-title {
+		font-family: Roboto Slab;
         font-size: 70px !important;
         letter-spacing: 0px !important;
     }
     .site-subtitle{
+	    font-family: Roboto Slab;
         letter-spacing: 0px !important;
         padding-bottom: 0px !important;
     }
