--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -4,6 +4,12 @@
     height: 1.5px;
     background-image: linear-gradient(90deg, #F79533 0%, #F37055 15%, #EF4E7B 30%, #A166AB 44%, #5073B8 58%, #1098AD 72%, #07B39B 86%, #6DBA82 100%);
 }
+
+// 页面留白更改
+.header-inner {
+  padding: 0px 0 70px;
+}
+
 // 站点名背景
 .brand{
     background-color: rgba(255, 255, 255, 0);
@@ -135,7 +141,7 @@
     font-weight: bold;
 }
 .post-nav-item a:hover {
-    color: rgb(161, 102, 171);
+    color: rgb(0, 255, 0);
     font-weight: bold;
 }
 // 文章底部评论
@@ -528,7 +534,7 @@ code.description {
     }
     .posts-expand {
         margin: 0px;
-        padding-top: 70px;
+        padding-top: 5px;
     }
     .posts-expand .post-title {
         font-size: 22px;
@@ -538,7 +544,7 @@ code.description {
     }
     .post {
         margin-bottom: 30px !important;
-        padding: 20px 15px 15px 15px !important;
+        padding: 0px 15px 15px 15px !important;
     }
     .post-body h2, h3, h4, h5, h6 {
         margin-left: -15px;
@@ -566,7 +572,7 @@ code.description {
     left: 10px;
 }
 .btn-bar {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(58, 59, 205 , 0.75);
 }
 // 移动端菜单
 @media (max-width: 767px) {
