--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -325,6 +325,7 @@ img:hover {
 @media (max-width: 767px) {
     .category-all-page {
         margin: -73px 15px 50px 15px;
+		background-color: rgba(255,255,255,0.49);
     }
     .category-all-page .category-all-title {
         margin-top: -5px;
@@ -344,6 +345,7 @@ img:hover {
     .tag-cloud {
         margin: -73px 15px 50px 15px;
         padding: 86px 5px 36px 5px;
+		background-color: rgba(255,255,255,0.49);
     }
 }
 // 本地搜索框
@@ -508,6 +510,7 @@ code.description {
     #top {
         margin: -93px 15px 50px 15px;
         padding: 96px 10px 0px 10px;
+		background-color: rgba(255,255,255,0.49);
     }
 	#top_inside {
 		margin-left: auto; 
@@ -545,6 +548,7 @@ code.description {
     .post {
         margin-bottom: 30px !important;
         padding: 0px 15px 15px 15px !important;
+		background-color: rgba(255,255,255,0.49);
     }
     .post-body h2, h3, h4, h5, h6 {
         margin-left: -15px;
@@ -578,7 +582,7 @@ code.description {
 @media (max-width: 767px) {
     .menu {
         text-align: center;
-        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+        box-shadow: 0px 5px 10px 0px rgba(58, 59, 205 , 0.75);
     }
     .site-nav {
         top: initial;
