--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -324,8 +324,8 @@ img:hover {
 }
 @media (max-width: 767px) {
     .category-all-page {
-        margin: -73px 15px 50px 15px;
 		background-color: rgba(255,255,255,0.49);
+        margin: -73px 15px 50px 15px;
     }
     .category-all-page .category-all-title {
         margin-top: -5px;
@@ -344,8 +344,8 @@ img:hover {
 @media (max-width: 767px) {
     .tag-cloud {
         margin: -73px 15px 50px 15px;
-        padding: 86px 5px 36px 5px;
 		background-color: rgba(255,255,255,0.49);
+        padding: 86px 5px 36px 5px;
     }
 }
 // 本地搜索框
@@ -576,7 +576,7 @@ code.description {
     left: 10px;
 }
 .btn-bar {
-    background-color: rgba(58, 59, 205 , 0.75);
+    background-color: #41a9d8;
 }
 // 移动端菜单
 @media (max-width: 767px) {
@@ -596,7 +596,7 @@ code.description {
 // 移动端顶部
 @media (max-width: 767px) {
     .site-title {
-        font-size: 70px !important;
+        font-size: 42px !important;
         letter-spacing: 0px !important;
     }
     .site-subtitle{
