2018年8月28日 18:57 新版博客收工

--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -14,13 +14,14 @@
 .brand{
     background-color: rgba(255, 255, 255, 0);
     margin-top: 15px;
-    padding: 0px;
+    padding: 0 40px;
+	color: #fff;
+	background: #ff2d2dcc;
 }
 // 站点名字体
 .site-title {
   font-size: 42px;
   font-weight: bold;
-  color: #000;
   line-height: 80px;
   letter-spacing: 3px;
 }
@@ -33,7 +34,7 @@
   color: #00000087;
   border-bottom-width: 3px;
   border-bottom-style: solid;
-  border-bottom-color: #ff5b00ad;
+  border-bottom-color: #507cd4a6;
 }
 // 文章
 .post {
@@ -141,7 +142,7 @@
     font-weight: bold;
 }
 .post-nav-item a:hover {
-    color: rgb(0, 255, 0);
+    color: #ff4c7d;
     font-weight: bold;
 }
 // 文章底部评论
@@ -152,12 +153,12 @@
 }
 // 超链接样式
 a {
-    color: rgb(80, 115, 184);
+    color: #000000;
     border-bottom-color: rgb(80, 115, 184);
 }
 a:hover {
     color: #FF4500;
-    border-bottom-color: rgb(161, 102, 171);
+    border-bottom-color: rgb(70, 130, 180);
 }
 // 分割线样式
 hr {
@@ -393,7 +394,7 @@ img#github-emoji {
     text-decoration: none;
 }
 .tag-cloud a:hover {
-    border-bottom: 1px solid rgb(161, 102, 171);
+    border-bottom: 1px solid rgb(255, 140, 105);
     text-decoration: none;
 }
 // 文章元数据中categories的样式（为emoji特设）
