--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -41,7 +41,8 @@
     margin-bottom: 50px;
     padding: 45px 36px 36px 36px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    background-color: #ffffff7d;
+    //background-color: #ffffff7d;
+	background-color: rgba(255,255,255,0.85)
 }
 // 文章标题字体
 .posts-expand .post-title {
@@ -320,12 +321,12 @@ img:hover {
 .category-all-page {
     margin: -80px 50px 40px 50px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    background-color: rgba(255,255,255,0.49);
+    background-color: rgba(255,255,255,0.85);
     padding: 86px 36px 36px 36px;
 }
 @media (max-width: 767px) {
     .category-all-page {
-		background-color: rgba(255,255,255,0.49);
+		background-color: rgba(255,255,255,0.85);
         margin: -73px 15px 50px 15px;
     }
     .category-all-page .category-all-title {
@@ -336,7 +337,7 @@ img:hover {
 .tag-cloud {
     margin: -80px 50px 40px 50px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    background-color: rgba(255,255,255,0.49);
+    background-color: rgba(255,255,255,0.85);
     padding: 86px 36px 36px 36px;
 }
 .tag-cloud-title {
@@ -345,7 +346,7 @@ img:hover {
 @media (max-width: 767px) {
     .tag-cloud {
         margin: -73px 15px 50px 15px;
-		background-color: rgba(255,255,255,0.49);
+		background-color: rgba(255,255,255,0.85);
         padding: 86px 5px 36px 5px;
     }
 }
@@ -498,7 +499,7 @@ code.description {
     text-align: center;
     margin: -100px 50px 40px 50px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    background-color: rgba(255,255,255,0.49);
+    background-color: rgba(255,255,255,0.85);
     padding: 106px 36px 10px 36px;
 }
 #top_inside {
@@ -511,7 +512,7 @@ code.description {
     #top {
         margin: -93px 15px 50px 15px;
         padding: 96px 10px 0px 10px;
-		background-color: rgba(255,255,255,0.49);
+		background-color: rgba(255,255,255,0.85);
     }
 	#top_inside {
 		margin-left: auto; 
@@ -549,7 +550,7 @@ code.description {
     .post {
         margin-bottom: 30px !important;
         padding: 0px 15px 15px 15px !important;
-		background-color: rgba(255,255,255,0.49);
+		background-color: rgba(255,255,255,0.85);
     }
     .post-body h2, h3, h4, h5, h6 {
         margin-left: -15px;
