--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -42,6 +42,7 @@
     padding: 45px 36px 36px 36px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 	background-color: rgba(255,255,255,0.85)
+	border-radius: 20px;
 }
 // 文章标题字体
 .posts-expand .post-title {
@@ -150,6 +151,7 @@
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
     margin: 80px 0px 40px 0px;
+	border-radius: 20px;
 }
 // 超链接样式
 a {
@@ -322,6 +324,7 @@ img:hover {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     background-color: rgba(255,255,255,0.85);
     padding: 86px 36px 36px 36px;
+	border-radius: 20px;
 }
 @media (max-width: 767px) {
     .category-all-page {
@@ -338,12 +341,35 @@ img:hover {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     background-color: rgba(255,255,255,0.85);
     padding: 86px 36px 36px 36px;
+	border-radius: 20px;
 }
 .tag-cloud-title {
     margin-bottom: 15px;
 }
 @media (max-width: 767px) {
     .tag-cloud {
+        margin: -73px 15px 50px 15px;
+		background-color: rgba(255,255,255,0.85);
+        padding: 86px 5px 36px 5px;
+    }
+}
+// 关于我页面
+.about-me {
+    margin: -80px 50px 40px 50px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    background-color: rgba(255,255,255,0.85);
+    padding: 86px 36px 36px 36px;
+	border-radius: 20px;
+}
+.about-me-title {
+    margin-bottom: 15px;
+}
+.about-me-write{
+    padding: 45px 36px 36px 36px;
+    font-size: 16px;
+}
+@media (max-width: 767px) {
+    .about-me {
         margin: -73px 15px 50px 15px;
 		background-color: rgba(255,255,255,0.85);
         padding: 86px 5px 36px 5px;
@@ -500,6 +526,7 @@ code.description {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     background-color: rgba(255,255,255,0.85);
     padding: 106px 36px 10px 36px;
+	border-radius: 20px;
 }
 #top_inside {
 	margin-left: auto; 
