更新代码配色方案

--- a/themes/ym/source/css/_common/components/highlight/theme.styl
+++ b/themes/ym/source/css/_common/components/highlight/theme.styl
@@ -6,6 +6,24 @@ if $highlight_theme == "normal"
   $highlight-current-line = #efefef
   $highlight-selection    = #d6d6d6
   $highlight-foreground   = #4d4d4c
+  $highlight-comment      = #4c923c
+  $highlight-red          = #c82829
+  $highlight-orange       = #f5871f
+  $highlight-yellow       = #eab700
+  $highlight-green        = #275cc1
+  $highlight-aqua         = #3e999f
+  $highlight-blue         = #4271ae
+  $highlight-purple       = #de1010
+  $highlight-gutter       = {
+    color: #869194,
+    bg-color: #eff2f3
+  }
+  
+if $highlight_theme == "tomorrow"
+  $highlight-background   = #ffffff
+  $highlight-current-line = #efefef
+  $highlight-selection    = #d6d6d6
+  $highlight-foreground   = #4d4d4c
   $highlight-comment      = #8e908c
   $highlight-red          = #c82829
   $highlight-orange       = #f5871f
