--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -71,17 +71,18 @@
     background-color: rgb(255, 255, 255);
     border-radius: 3px;
     font-size: 15px;
-    box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
+    box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.35);
     border: none !important;
     transition-property: unset;
     padding: 0px 15px;
 }
 .post-button .btn:hover {
-    color: rgb(255, 255, 255) !important;
+    color: #fff !important;
     border-radius: 3px;
     font-size: 15px;
-    box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
-    background-image: linear-gradient(90deg, #a166ab 0%, #ef4e7b 25%, #f37055 50%, #ef4e7b 75%, #a166ab 100%);
+    box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.35);
+    background-image: linear-gradient(to right, #25aae1, #40e495);
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
 }
 // 去除在页面文章之间的分割线
 .posts-expand .post-eof {
