修改关于我页面样式

--- a/themes/ym/source/css/_custom/custom.styl
+++ b/themes/ym/source/css/_custom/custom.styl
@@ -373,15 +373,27 @@ img:hover {
     margin: -80px 50px 40px 50px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     background-color: rgba(255,255,255,0.85);
-    padding: 86px 36px 36px 36px;
+    padding: 86px 36px 55px 36px;
 	border-radius: 20px;
 }
 .about-me-title {
     margin-bottom: 15px;
 }
-.about-me-write{
-    padding: 45px 36px 36px 36px;
-    font-size: 16px;
+.about-me-img {
+  display: block;
+  margin: 0 auto;
+  padding: 2px;
+  max-width: 96px;
+  height: auto;
+  border: 2px solid #333;
+  border-radius: 100%;
+  transition: transform 1s ease-out;
+}
+.about-me-name {
+  text-align: center;
+  color: #222;
+  font-size: 18px;
+  font-weight: normal;
 }
 @media (max-width: 767px) {
     .about-me {
